--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>NBA Rookies stats' impact on longevity</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,7 +12,10 @@
     </header>
     <section id="intro">
         <h2>Introduction</h2>
-        <p>This is the paragraphe où j'explique mes méthodes, la question à laquelle j'essaie de répondre, etc</p>
+        <p>Hello,
+This is a personnal project I made to answer a question that kept me awake at night : can we predict NBA players' success by looking at their Rookie year stats ?
+This repository contains all the data, scripts and visualizations I made in order to come to a final result, aalong with this file that will detail my thought process, the choices I made and present the conclusions I arrived at.
+</p>
     </section>
     <section id="Viz1">
         <h2>Results</h2>
