--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
             I'll try and provide one :
             
         </p>
-        <div class='tableauPlaceholder' id='viz1732623779216' style='position: relative'><noscript><a href='#'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Dr&#47;Draftingdata_17326237396590&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Draftingdata_17326237396590&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Dr&#47;Draftingdata_17326237396590&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='fr-FR' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1732623779216');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1024px';vizElement.style.height='795px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1024px';vizElement.style.height='795px';} else { vizElement.style.width='100%';vizElement.style.height='827px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-        <p>
+        <div class='tableauPlaceholder' id='viz1733072331453' style='position: relative'><noscript><a href='#'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ro&#47;Rookiesageandloyalty&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Rookiesageandloyalty&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ro&#47;Rookiesageandloyalty&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='fr-FR' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1733072331453');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1400px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1400px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='777px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>        
+        <p>    
             What do we see here ? 
             We see all 30 teams ranked on 2 axes. The farther to the right a team is, the best it is at identifying talent (% of rookies that made it 5Y).
             And the higher it is, the more loyal the players it selects (% of years said rookies played in this franchise).
@@ -94,13 +94,17 @@
             What we'll try to do is train a model on all rookies numbers from 1946 to 2019, so it can deduce what successful players did or didn't do in their rookie year, and generalize it to our 2020+ draft classes, to predict whether or not they will make it >5Y.
             Here we go.
         </p>
-    <center><img src="Correlation Matrix.png"></center>
-    <p>Explications des features, 2-3 exemples sur les impacts des stats sur la longévité</p>
 
-    
-        <h2>Model</h2>
-        <p>Là je met les explications du modèle que j'utilise, et j'explique les tenants et aboutissants (hyperparamètres, sample sizes etc)</p>
-        <p>Image des % accuracy recall etc (+ explications)</p>
+    <center><img src="Correlation Matrix.png"></center>
+    <p>Est-ce que je met la matrice de correlation ? Ca va être trop complexe pour le grand public et pas assez intéressant pour un recruteur mais ça fait de la couleur. Je pense pas qu'il y en ait besoin.
+
+    </p>
+
+    <p>
+        Explications des mesures et stats utilisées (la base, la ligne de stat classique en brut par match, on reste sur le plus simple)
+        2-3 exemples sur les impacts des stats sur la longévité ? Vu que je met pas la matrice, peut-être pas. Juste une ligne de stat d'un mec en exmple avec une fonction en hover qui explique chaque stat (chaque acronyme) pour celleux qui connaissent pas.
+
+    </p>
 
     <script src="script.js"></script>
 </body>
