--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section id="Viz_Rookie_age_avg">
         <h2>NBA Rookies age per year</h2>
         <p>
-            Since we focus on rookie years, and our measure of success is the time spent in the league, we have to be careful with confounding variables such as the age at which the player begins it's carrer. 
+            Since we focus on rookie years, and our measure of success is the time spent in the league, we have to be careful with confounding variables such as the age at which the player begins his carrer. 
             Indeed, I know from my little understanding of the NBA world, that age is a big factor when it comes to selecting and then making a rookie play, but it also affects the time a player can stay in the league (before losing athletical abilities). 
             Of course a younger player has more time in front of him to play 5 years more and a better chance of earning the label than an older rookie.
             Yet, rookies are selected based on their potential but also on their immediate qualities and output. So if player A is drafted younger than player B, it most likely means that teams value A's actual skillset higher than B's, else they would've chosen B earlier.
@@ -78,7 +78,7 @@
             We'll try and provide one :
             
         </p>
-        <div class='tableauPlaceholder' id='viz1733247764003' style='position: relative'><noscript><a href='#'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ro&#47;Rookiescomeyoungerandyounger&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Rookiescomeyoungerandyounger&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ro&#47;Rookiescomeyoungerandyounger&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='fr-FR' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1733247764003');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1200px';vizElement.style.height='627px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1200px';vizElement.style.height='627px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+        <div class='text-image-container' id='viz1733247764003' style='position: relative'><noscript><a href='#'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ro&#47;Rookiescomeyoungerandyounger&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Rookiescomeyoungerandyounger&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ro&#47;Rookiescomeyoungerandyounger&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='fr-FR' /><param name='filter' value='publish=yes' /></object> </div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1733247764003');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1200px';vizElement.style.height='627px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1200px';vizElement.style.height='627px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
         <p> <br>
             What do we see here ? <br>
             We see all 30 teams ranked on 2 axes. The farther to the right a team is, the best it is at identifying talent (% of rookies that made it 5Y).
@@ -99,13 +99,31 @@
             Now that we dismissed every other variables we could think of, we can focus on the nitty gritty : rookies stats.
 
             What we'll do is train a model on all rookies numbers from 1946 to 2019, so it can deduce what successful players did or didn't do in their rookie year, and generalize it to our 2020+ draft classes, to predict whether or not they will make it >5Y.
-            Here we go.
+            Let's go.
         </p>
-        <p>
+        <h2>Decision tree model and Predictions</h2>
+        <div class="text-image-container"><br>
             <img width="40%" src="Correlation Matrix.png">
 
-        </p>
-        <p>
+            <span class="text" > 
+            This is the data's corelation matrix <br>
+            Every number represents a corelation between 2 features in our dataset and explains their relation. Take the first line for example. 
+            It shows what variables are corelated with Games Played. We see a strong correlation (close to 1) with Minutes and Points, but a week one with FG%.
+            <br>This means in our dataset, rookies that tend to play more games get more points and play more minutes per game but they have similar FG% with rookies that played less games. 
+            This doesn't tackle cause and consequences, just correlation.
+
+            <br><br>This helps us understand what features are important for our target. That's where the last line comes in. We can see which one has an impact on the 5Y label.
+            <br>Unfortunately, no feature has a very high correlation with 5Y. That would've made our job easier, but we can still get something out of this.
+                Games played, Minutes per game, Pts and Steals (?) tend to have the biggest impact on success for a rookie. We can probably justify some of these, like the better a rookie the more Games / Minutes he plays.
+                And the more he scores, the better he is. But we could also say that steals tend to suggest defensive activity and energy, both indicative of a great mindset necessary to succeed. 
+                More than blocks and assists for that matter.
+            </span>
+
+
+            <br>
+        </div>
+        <p><br>
+            
             The trained model will be available on the repository as well as all the data and scripts used for this work but for now we want to appreciate what we got and play with it !
             We have a model that can predict the longevity of rookies with 75% accuracy, which is not bad considering how difficult talent evaluation is.
             We want to test it on new data, we want to know whether or not the 2023 draft class is as great as it was advertised ! 
