--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
             <br><br>This helps us understand what features are important for our target. That's where the last line comes in. We can see which one has an impact on the 5Y label.
             <br>Unfortunately, no feature has a very high correlation with 5Y. That would've made our job easier, but we can still get something out of this.
-                Games played, Minutes per game, Pts and Steals (?) tend to have the biggest impact on success for a rookie. We can probably justify some of these, like the better a rookie the more Games / Minutes he plays.
+                Games played, Minutes per game, Pts and Steals tend to have the biggest impact on success for a rookie. We can probably justify some of these, like the better a rookie the more Games / Minutes he plays.
                 And the more he scores, the better he is. But we could also say that steals tend to suggest defensive activity and energy, both indicative of a great mindset necessary to succeed. 
                 More than blocks and assists for that matter.
             </span>
